--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "recharts": "^2.8.0",
     "roboflow": "^0.2.0",
     "sass": "^1.67.0",
+    "twilio": "^4.17.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
